@@ -1,12 +1,22 @@
 BROWSER  B R AW Z ER
+CANCEL  K AE N S AH L 
 CLOSE  K L OW S
 DOWN  D AW N
+EDIT  EH D AH T 
+FILE  F AY L
 MAIL  M EY L
 MAXIMIZE  M AE K S AH M AY Z
 MINIMIZE  M IH N AH M AY Z
+NEW  N Y UW
 NEXT  N EH K S T
+OK  OW K EY
+OPEN  OW P AH N
 PAGE  P EY JH
+PRINT  P R IH N T 
+QUIT  K W IH T
 RUN  R AH N
+SAVE  S EY V
 TERMINAL  T ER M AH N AH L
+UNDO  AH N D UW
 UP  AH P
 WINDOW  W IH N D OW
