@@ -1,3 +1,7 @@
+2007-06-11  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* LINGUAS:
+
 2007-06-07  Raphael Nunes da Motta  <raphael.nmunes.enc04@gmail.com>
 
 	* sv.po: Updated Swedish translation
